Fixed accessibilty issue of placeholder text being hard to read

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -304,6 +304,10 @@ img:hover+span {
     padding: 2px 6px;
 }
 
+#email,#name {
+    background: white;
+}
+
 ::placeholder {
     /* Firefox */
     color: #6c7175;
